--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <load src="./partials/header.html" />
     <main>
       <!-- hero -->
-      <load src="" />
+      <load src="./partials/hero.html" />
       <!-- skills -->
       <load src="" />
       <!--team -->
