--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <!-- skills -->
       <load src="" />
       <!--team -->
-      <load src="" />
+      <load src="./partials/team.html" />
     </main>
     <!--footer -->
     <load src="" />
